// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Block basic usage 1`] = `
<div
  style={
    Object {
      "border": "1px solid red",
    }
  }
>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "marginLeft": "auto",
          "marginRight": "auto",
          "maxWidth": "960px",
          "paddingLeft": "15px",
          "paddingRight": "15px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px solid blue",
          }
        }
      >
        Hello World
      </div>
      <span
        style={
          Object {
            "clear": "both",
            "display": "table",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Block with background color 1`] = `
<div
  style={
    Object {
      "border": "1px solid red",
    }
  }
>
  <div
    style={
      Object {
        "background": "linear-gradient(350deg,  #0d6abe 0%,#a1bee8 50%,#c99eca 100%)",
        "color": "white",
      }
    }
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "marginLeft": "auto",
          "marginRight": "auto",
          "maxWidth": "960px",
          "paddingLeft": "15px",
          "paddingRight": "15px",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "border": "1px solid blue",
          }
        }
      >
        <p>
          Hello World
        </p>
        <p>
          Hello World
        </p>
        <p>
          Hello World
        </p>
      </div>
      <span
        style={
          Object {
            "clear": "both",
            "display": "table",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
   😀😎👍💯 
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello World
</button>
`;

exports[`Storyshots H1 basic usage 1`] = `
<h1
  style={
    Object {
      "-webkit-background-clip": "text",
      "-webkit-text-fill-color": "transparent",
      "backgroundImage": "linear-gradient(350deg,  #0d6abe 10%,#c99eca 100%)",
      "fontFamily": "Tahoma, Geneva, sans-serif",
    }
  }
>
  Hello World
</h1>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  className="css-1fqbdip"
>
  <h1
    className="css-nil"
  >
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the
     
    <code
      className="css-mteq83"
    >
      src/stories
    </code>
     
    directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample
     
    <a
      className="css-ca0824"
      onClick={[Function]}
      role="button"
      tabIndex="0"
    >
      stories
    </a>
     
    for a component called
     
    <code
      className="css-mteq83"
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      className="css-mteq83"
    >
      Button
    </code>
     stories located at 
    <code
      className="css-mteq83"
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      className="css-ca0824"
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    className="css-bwdon3"
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the
     
    <code
      className="css-mteq83"
    >
      .storybook/webpack.config.js
    </code>
     
    to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
